Alterações no tamanho do h2

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <div class="featured-icon">
                                 <i class="fa fa-edit"></i>
                             </div>
-                            <p>Possuo conhecimentos em estratégias de marketing digital voltadas à geração de valor e posicionamento online, atuando com produção de conteúdo, redes sociais, análise de métricas e campanhas pagas. Compreendo os principais canais digitais (orgânico e pago) e uso ferramentas como Google Analytics e Meta Ads para otimizar resultados e alcançar o público-alvo com eficiência.</p>
+                            <p>Possuo conhecimentos em estratégias de marketing digital voltadas à geração de valor e posicionamento online, atuando com produção de conteúdo, redes sociais e análise de métricas.</p>
                         </div>
                     </div>
                 </div>
@@ -190,7 +190,7 @@
                 <div class="col-lg-6 ">
                     <div class="section-title text-center">
                         <h2 style="color: white;">EDUCAÇÃO</h2>
-                        <h3 style="color: white;">UCDB - Universidade católica Dom Bosco</h3>
+                        <h3 style="color: white;">UCDB - Universidade Católica Dom Bosco</h3>
                     </div>
                 </div>
             </div>
