--- a/index.html
+++ b/index.html
@@ -305,137 +305,168 @@
 
     <!-- ====== Portfolio Section ====== -->
     <section id="jobs" class="section-padding pb-85 portfolio-area bg-light">
-        <div class="container">
-            <!-- Section Title -->
-            <div class="row justify-content-center">
-                <div class="col-lg-6 ">
-                    <div class="section-title text-center">
-                        <h2>Trabalhos</h2>
+    <div class="container">
+        <!-- Section Title -->
+        <div class="row justify-content-center">
+            <div class="col-lg-6 ">
+                <div class="section-title text-center">
+                    <h2>Trabalhos</h2>
+                </div>
+            </div>
+        </div>
+        <!-- //Section Title -->
+        <div class="row justify-content-center">
+            <!-- Work List Menu-->
+            <div class="col-lg-8">
+            </div>
+            <!-- // Work List Menu -->
+        </div>
+        <div class="row portfolio">
+            <!-- Single Portfolio -->
+            <div class="col-lg-4 col-md-6 mix logo web graphic other wp">
+                <div class="single-portfolio" style="background-image: url(assets/images/portfolio/trabalho.png)">
+                    <div class="portfolio-hover">
+                        <a href="https://drive.google.com/file/d/1jaYt6kB60Lu9HAyxoYETAneKDiKzvOjS/view?usp=sharing" target="_blank" rel="noopener noreferrer"><h4>Foto <span>1</span></h4></a>
                     </div>
                 </div>
             </div>
-            <!-- //Section Title -->
-            <div class="row justify-content-center">
-                <!-- Work List Menu-->
-                <div class="col-lg-8">
+            <!-- // Single Portfolio -->
+
+            <!-- Single Portfolio -->
+            <div class="col-lg-4 col-md-6 mix logo web graphic other wp">
+                <div class="single-portfolio" style="background-image: url(assets/images/portfolio/trabalho.png)">
+                    <div class="portfolio-hover">
+                        <a href="https://drive.google.com/file/d/1oNyCw7rWdGZOToEcQGrUWn8-SHhkfsLa/view?usp=sharing" target="_blank" rel="noopener noreferrer"><h4>Foto <span>2</span></h4></a>
+                    </div>
                 </div>
-                <!-- // Work List Menu -->
             </div>
-            <div class="row portfolio">
-                <!-- Single Portfolio -->
-                <div class="col-lg-4 col-md-6 mix logo web graphic other wp">
-    <div class="single-portfolio" style="background-image: url('https://drive.google.com/uc?export=view&id=1jaYt6kB60Lu9HAyxoYETAneKDiKzvOjS')">
-        <div class="portfolio-icon text-center">
-            <a data-lightbox='lightbox' href="https://drive.google.com/file/d/1jaYt6kB60Lu9HAyxoYETAneKDiKzvOjS/view?usp=sharing">
-                <i class="fas fa-expand-arrows-alt"></i>
-            </a>
-        </div>
-        <div class="portfolio-hover">
-            <h4>Trabalho <span>Banquete Árabe</span></h4>
+            <!-- // Single Portfolio -->
+
+            <!-- Single Portfolio -->
+            <div class="col-lg-4 col-md-6 mix wp other">
+                <div class="single-portfolio">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/trabalho.png)">
+                    <div class="portfolio-hover">
+                        <a href="https://drive.google.com/file/d/1Mg1FAyjXSdXepETedbwBbcAFM-AvWsb6/view?usp=sharing" target="_blank" rel="noopener noreferrer"><h4>Video <span>1</span></h4></a>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <!-- // Single Portfolio -->
+            <div class="col-lg-4 col-md-6 mix wp other">
+                <div class="single-portfolio">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/trabalho.png)">
+                    <div class="portfolio-hover">
+                        <a href="https://drive.google.com/file/d/1Mg1FAyjXSdXepETedbwBbcAFM-AvWsb6/view?usp=sharing" target="_blank" rel="noopener noreferrer"><h4>Video <span>1</span></h4></a>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mix wp other">
+                <div class="single-portfolio">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/trabalho.png)">
+                    <div class="portfolio-hover">
+                        <a href="https://drive.google.com/file/d/1Mg1FAyjXSdXepETedbwBbcAFM-AvWsb6/view?usp=sharing" target="_blank" rel="noopener noreferrer"><h4>Video <span>1</span></h4></a>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mix wp other">
+                <div class="single-portfolio">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/trabalho.png)">
+                    <div class="portfolio-hover">
+                        <a href="https://drive.google.com/file/d/1Mg1FAyjXSdXepETedbwBbcAFM-AvWsb6/view?usp=sharing" target="_blank" rel="noopener noreferrer"><h4>Video <span>2</span></h4></a>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mix wp other">
+                <div class="single-portfolio">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/trabalho.png)">
+                    <div class="portfolio-hover">
+                        <a href="https://drive.google.com/file/d/1sbnMLgB1zLqQ-dQ75LPAb5PtUQUM7Zod/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><h4>Video <span>3</span></h4></a>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mix wp other">
+                <div class="single-portfolio">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/trabalho.png)">
+                    <div class="portfolio-hover">
+                        <a href="https://drive.google.com/file/d/1jfcs5CIC1Hc_RoLN59tB5thsmyhzV99c/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><h4>Video <span>4</span></h4></a>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mix wp other">
+                <div class="single-portfolio">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/trabalho.png)">
+                    <div class="portfolio-hover">
+                        <a href="https://drive.google.com/file/d/1s9Jv8eFINduIvokb3LHY2YKL5vXI_Iqe/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><h4>Video <span>5</span></h4></a>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mix wp other">
+                <div class="single-portfolio">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/trabalho.png)">
+                    <div class="portfolio-hover">
+                        <a href="https://drive.google.com/file/d/1WaxDu4Wdeyt8YbYN1R3cy48VK1A_et2o/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><h4>Video <span>6</span></h4></a>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mix wp other">
+                <div class="single-portfolio">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/trabalho.png)">
+                    <div class="portfolio-hover">
+                        <a href="https://drive.google.com/file/d/1IAIhpzIcYYlpri4YI_zpk0hPDqipufko/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><h4>Video <span>7</span></h4></a>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mix wp other">
+                <div class="single-portfolio">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/trabalho.png)">
+                    <div class="portfolio-hover">
+                        <a href="https://drive.google.com/file/d/1Da2_B1OngnAJ1cRmMM6GDRYJ_YXoAoZ9/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><h4>Video <span>8</span></h4></a>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mix wp other">
+                <div class="single-portfolio">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/trabalho.png)">
+                    <div class="portfolio-hover">
+                        <a href="https://drive.google.com/file/d/1oEK9dryZLSU0bVUwlQIMFWx9GfFfQoFt/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><h4>Video <span>9</span></h4></a>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mix wp other">
+                <div class="single-portfolio">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/trabalho.png)">
+                    <div class="portfolio-hover">
+                        <a href="https://drive.google.com/file/d/1-mTrpypRXTIH0BPMCK0lYfqPoQJq_H9k/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><h4>Video <span>10</span></h4></a>
+                    </div>
+                </div>
+                </div>
+            </div>
+           <!-- // Single Portfolio -->
         </div>
     </div>
-</div>
+</section>
 
-                <!-- // Single Portfolio -->
-                <!-- Single Portfolio -->
-                <div class="col-lg-4 col-md-6 mix logo web graphic other wp">
-                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/img-2.jpg)">
-                        <div class="portfolio-icon text-center">
-                            <a data-lightbox='lightbox' href="assets/images/portfolio/img-2.jpg"><i class="fas fa-expand-arrows-alt"></i></a>
-                        </div>
-                        <div class="portfolio-hover">
-                            <h4>Project <span>Name</span></h4>
-                        </div>
-                    </div>
-                </div>
-                <!-- // Single Portfolio -->
-                <!-- Single Portfolio -->
-                <div class="col-lg-4 col-md-6 mix wp other">
-                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/img-3.jpg)">
-                        <div class="portfolio-icon text-center">
-                            <a data-lightbox='lightbox' href="assets/images/portfolio/img-3.jpg"><i class="fas fa-expand-arrows-alt"></i></a>
-                        </div>
-                        <div class="portfolio-hover">
-                            <h4>Project <span>Name</span></h4>
-                        </div>
-                    </div>
-                </div>
-                <!-- // Single Portfolio -->
-                <!-- Single Portfolio -->
-                <div class="col-lg-4 col-md-6 mix logo other graphic wp web">
-                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/img-4.jpg)">
-                        <div class="portfolio-icon text-center">
-                            <a data-lightbox='lightbox' href="assets/images/portfolio/img-4.jpg"><i class="fas fa-expand-arrows-alt"></i></a>
-                        </div>
-                        <div class="portfolio-hover">
-                            <h4>Project <span>Name</span></h4>
-                        </div>
-                    </div>
-                </div>
-                <!-- // Single Portfolio -->
-                <!-- Single Portfolio -->
-                <div class="col-lg-4 col-md-6 mix logo other wp graphic web">
-                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/img-5.jpg)">
-                        <div class="portfolio-icon text-center">
-                            <a data-lightbox='lightbox' href="assets/images/portfolio/img-5.jpg"><i class="fas fa-expand-arrows-alt"></i></a>
-                        </div>
-                        <div class="portfolio-hover">
-                            <h4>Project <span>Name</span></h4>
-                        </div>
-                    </div>
-                </div>
-                <!-- // Single Portfolio -->
-                <!-- Single Portfolio -->
-                <div class="col-lg-4 col-md-6 mix wp logo graphic web">
-                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/img-6.jpg)">
-                        <div class="portfolio-icon text-center">
-                            <a data-lightbox='lightbox' href="assets/images/portfolio/img-6.jpg"><i class="fas fa-expand-arrows-alt"></i></a>
-                        </div>
-                        <div class="portfolio-hover other">
-                            <h4>Project <span>Name</span></h4>
-                        </div>
-                    </div>
-                </div>
-                <!-- // Single Portfolio -->
-                <!-- Single Portfolio -->
-                <div class="col-lg-4 col-md-6 mix web wp">
-                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/img-7.jpg)">
-                        <div class="portfolio-icon text-center">
-                            <a data-lightbox='lightbox' href="assets/images/portfolio/img-7.jpg"><i class="fas fa-expand-arrows-alt"></i></a>
-                        </div>
-                        <div class="portfolio-hover">
-                            <h4>Project <span>Name</span></h4>
-                        </div>
-                    </div>
-                </div>
-                <!-- // Single Portfolio -->
-                <!-- Single Portfolio -->
-                <div class="col-lg-4 col-md-6 mix logo graphic wp web">
-                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/img-8.jpg)">
-                        <div class="portfolio-icon text-center">
-                            <a data-lightbox='lightbox' href="assets/images/portfolio/img-8.jpg"><i class="fas fa-expand-arrows-alt"></i></a>
-                        </div>
-                        <div class="portfolio-hover">
-                            <h4>Project <span>Name</span></h4>
-                        </div>
-                    </div>
-                </div>
-                <!-- // Single Portfolio    -->
-                <!-- Single Portfolio -->
-                <div class="col-lg-4 col-md-6 mix other logo web">
-                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/img-9.jpg)">
-                        <div class="portfolio-icon text-center">
-                            <a data-lightbox='lightbox' href="assets/images/portfolio/img-9.jpg"><i class="fas fa-expand-arrows-alt"></i></a>
-                        </div>
-                        <div class="portfolio-hover">
-                            <h4>Project <span>Name</span></h4>
-                        </div>
-                    </div>
-                </div>
-                <!-- // Single Portfolio -->
-            </div>
-        </div>
-    </section>
     <!-- ====== // Portfolio Section ====== -->
 
     <!-- ====== Contact Area ====== -->
