--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 ">
                     <div class="section-title text-center">
-                        <h3 style="color: white;">Portal de Negócios Campo Grande</h3>
+                        <h3 style="color: white;">Portal Negócios Campo Grande</h3>
                     </div>
                 </div>
             </div>
@@ -380,6 +380,75 @@
                         </div>
                         <div class="portfolio-hover">
                             <h4>Foto <span>2</span></h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mix logo web graphic other wp">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/foto3.jpg)">
+                        <div class="portfolio-icon text-center">
+                            <a href="assets/images/portfolio/foto3.jpg" data-lightbox="gallery" data-title="Foto 3">
+                                <i class="fas fa-expand-arrows-alt"></i>
+                            </a>
+                        </div>
+                        <div class="portfolio-hover">
+                            <h4>Foto <span>3</span></h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mix logo web graphic other wp">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/foto4.jpg)">
+                        <div class="portfolio-icon text-center">
+                            <a href="assets/images/portfolio/foto4.jpg" data-lightbox="gallery" data-title="Foto 4">
+                                <i class="fas fa-expand-arrows-alt"></i>
+                            </a>
+                        </div>
+                        <div class="portfolio-hover">
+                            <h4>Foto <span>4</span></h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mix logo web graphic other wp">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/foto5.png)">
+                        <div class="portfolio-icon text-center">
+                            <a href="assets/images/portfolio/foto5.png" data-lightbox="gallery" data-title="Foto 5">
+                                <i class="fas fa-expand-arrows-alt"></i>
+                            </a>
+                        </div>
+                        <div class="portfolio-hover">
+                            <h4>Foto <span>5</span></h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mix logo web graphic other wp">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/foto6.png)">
+                        <div class="portfolio-icon text-center">
+                            <a href="assets/images/portfolio/foto6.png" data-lightbox="gallery" data-title="Foto 6">
+                                <i class="fas fa-expand-arrows-alt"></i>
+                            </a>
+                        </div>
+                        <div class="portfolio-hover">
+                            <h4>Foto <span>6</span></h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mix logo web graphic other wp">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/revista.png)">
+                        <div class="portfolio-icon text-center">
+                            <a href="assets/images/portfolio/revista.png" data-lightbox="gallery" data-title='Revista Portal Negócios CG<br><a href="https://drive.google.com/file/d/17x0Zxw7x5hArZjIVZiB8duphn2XgxDiA/view?usp=sharing" target="_blank" rel="noopener noreferrer" style="color: #c00000; font-weight: bold; font-size: 16px;">Clique para abrir no Google Drive</a>'>
+                                <i class="fas fa-expand-arrows-alt"></i>
+
+                                <a href="https://drive.google.com/file/d/17x0Zxw7x5hArZjIVZiB8duphn2XgxDiA/view?usp=sharing" target="_blank" rel="noopener noreferrer" title="Abrir no Google Drive" style="margin-left: 10px;">
+                            <i class="fas fa-external-link-alt"></i>
+                        </a>
+                            </a>
+                        </div>
+                        <div class="portfolio-hover">
+                            <h4>Revista <span>Portal Negócios CG</span></h4>
                         </div>
                     </div>
                 </div>
