--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
     <div class="hero-aria" id="home">
         <!-- Hero Area Content -->
         <div class="container">
-            <div class="hero-content h-100">
+            <div class="hero-content h-100 d-flex align-items-center justify-content-center">
                 <div class="d-table">
                     <div class="d-table-cell">
-                        <h2 class="text-uppercase">Transformando ideias em impacto com liderança estratégica e resultados que inspiram</h2>
+                        <h2 class="text-uppercase">Transformando ideias em impacto com liderança estratégica e
+                            resultados que inspiram</h2>
                     </div>
                 </div>
             </div>
