Alteração para responsividade

--- a/index.html
+++ b/index.html
@@ -72,38 +72,35 @@
 
     <!-- ====== Hero Area ====== -->
     <div class="hero-aria" id="home">
-        <!-- Hero Area Content -->
-        <div class="container">
-            <div class="hero-content h-100 d-flex align-items-center justify-content-center">
-                <div class="d-table">
-                    <div class="d-table-cell">
-                        <h2 class="text-uppercase">Transformando ideias em impacto com liderança estratégica e
-                            resultados que inspiram</h2>
-                    </div>
+    <!-- Hero Area Content -->
+    <div class="container">
+        <div class="hero-content h-100 d-flex align-items-center justify-content-center">
+            <div class="d-table">
+                <div class="d-table-cell">
+                    <h2 class="text-uppercase">
+                        Transformando ideias em impacto com liderança estratégica e resultados que inspiram
+                    </h2>
                 </div>
             </div>
         </div>
-        <!-- // Hero Area Content -->
-        <!-- Hero Area Slider -->
-        <div class="hero-area-slids owl-carousel">
-            <div class="single-slider">
-                <!-- Single Background -->
-                <div class="slider-bg" style="background-image: url(assets/images/hero-area/lideranca.png)"></div>
-                <!-- // Single Background -->
-            </div>
-            <div class="single-slider">
-                <!-- Single Background -->
-                <div class="slider-bg" style="background-image: url(assets/images/hero-area/marketing.png)"></div>
-                <!-- // Single Background -->
-            </div>
-            <div class="single-slider">
-                <!-- Single Background -->
-                <div class="slider-bg" style="background-image: url(assets/images/hero-area/publicidade.png)"></div>
-                <!-- // Single Background -->
-            </div>
-        </div>
-        <!-- // Hero Area Slider -->
     </div>
+    <!-- // Hero Area Content -->
+
+    <!-- Hero Area Slider -->
+    <div class="hero-area-slids owl-carousel">
+        <div class="single-slider">
+            <div class="slider-bg" style="background-image: url(assets/images/hero-area/lideranca.png)"></div>
+        </div>
+        <div class="single-slider">
+            <div class="slider-bg" style="background-image: url(assets/images/hero-area/marketing.png)"></div>
+        </div>
+        <div class="single-slider">
+            <div class="slider-bg" style="background-image: url(assets/images/hero-area/publicidade.png)"></div>
+        </div>
+    </div>
+    <!-- // Hero Area Slider -->
+</div>
+
     <!-- ====== //Hero Area ====== -->
 
     <!-- ====== Featured Area ====== -->
